# betting-vrf

frontend/: README.md  package.json  quasar.config.js
frontend/program/idl/: vrf_betting.json
frontend/src/boot/: constants.ts  solana-wallets.ts
frontend/src/components/: CustomWalletButton.vue  CustomWalletConnectButton.vue
frontend/src/i18n/en-US/: index.ts
frontend/src/layouts/: MainLayout.vue
program/: .gitignore  .solitarc.js  Cargo.toml  package.json  rustfmt.toml
program/src/: checks.rs  constants.rs  entrypoint.rs  error.rs  lib.rs  processor.rs
program/src/instructions/: game_close.rs  game_create.rs  game_place_bet.rs  game_resolve_vrf_result.rs  game_set_active.rs  mint_create.rs  mod.rs  stats_account_create.rs  user_account_close.rs  user_account_create.rs  user_account_deposit.rs  user_account_withdraw.rs  vrf_result_close.rs  vrf_result_fullfill.rs  vrf_result_mark_close.rs
program/src/state/: mod.rs  stats.rs  user_account.rs  vrf_result.rs
program/src/state/game/: coinflip.rs  crash.rs  mod.rs
