[package]
name = "vrf-betting"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint=[]
test-bpf=[]

[dependencies]
solana-program = "1.11.7"
shank = "0.0.5"
borsh = { version="0.9.3",features=["const-generics"] }
thiserror = "~1.0"
num-derive = "0.3.3"
num-traits = "~0.2"

[dev-dependencies]
solana-program-test = "1.11.7"
solana-sdk = "1.11.7"
home = "0.5.3"


[lib]
crate-type = ["cdylib", "lib"]